--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,18 @@ MONGODB_URL=
 MONGODB_DB=
 
 APP_DOMAIN=
-
+APP_DOMAIN=
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
 SMTP_PASSWORD=
 SMTP_FROM=
+
+JWT_SECRET=
+
+CLOUDINARY_NAME=
+CLOUDINARY_API_KAY=
+CLOUDINARY_SECRET=
+
+SAVE_FILE_STRATEGY=
+
