--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@redocly/cli": "^1.34.2",
     "eslint": "^9.2.0",
     "globals": "^15.1.0",
     "nodemon": "^3.1.9",
@@ -32,6 +33,7 @@
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
-    "pino-http": "^4.3.0"
+    "pino-http": "^4.3.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
