--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node  src/index",
-    "dev": "nodemon src/index"
+    "dev": "nodemon src/index",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle docs/openapi.yaml --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "D-s-Seagull <dchaika.work@gmail.com>",
